Set correct icon on completed download. Disable download status triggers for now.

--- a/configdialog.ui
+++ b/configdialog.ui
@@ -90,6 +90,9 @@
        </item>
        <item row="4" column="0">
         <widget class="QCheckBox" name="downloadCheckBox">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Check for download status automatically at startup</string>
          </property>
